--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,12 +17,16 @@ android {
         }
     }
 }
+repositories {
+    jcenter();
+}
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     //noinspection GradleDependency
     compile 'com.android.support:palette-v7:23.2.1'
+    provided 'de.robv.android.xposed:api:81'
 
 }
 
