--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     //noinspection GradleDependency
-    compile 'com.android.support:palette-v7:23.2.1'
     provided 'de.robv.android.xposed:api:81'
 
+    compile 'com.android.support:palette-v7:23.2.1'
+    compile 'com.android.support:support-v4:23.2.1'
 }
 
