--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "pl.lawiusz.lockscreenvisualizerxposed"
         minSdkVersion 21
         targetSdkVersion 23
-        versionCode 4
-        versionName "1.3"
+        versionCode 5
+        versionName "1.4-DEBUG"
     }
     buildTypes {
         release {
@@ -19,6 +19,7 @@ android {
 }
 repositories {
     jcenter();
+
 }
 
 dependencies {
@@ -27,5 +28,7 @@ dependencies {
     provided 'de.robv.android.xposed:api:81'
     //noinspection GradleDependency
     compile 'com.android.support:palette-v7:23.2.1'
+    //noinspection GradleDynamicVersion
+    compile 'com.pes.materialcolorpicker:library:1.0.+'
 }
 
