--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 23
         versionCode 5
-        versionName "1.4-DEBUG"
+        versionName "1.4"
     }
     buildTypes {
         release {
