--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.3"
 
     defaultConfig {
         applicationId "pl.lawiusz.lockscreenvisualizerxposed"
         minSdkVersion 21
-        targetSdkVersion 23
-        versionCode 10
-        versionName "1.8.1-DEBUG"
+        targetSdkVersion 24
+        versionCode 11
+        versionName "1.8.2-DEBUG"
     }
     buildTypes {
         release {
@@ -18,19 +18,41 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 repositories {
-    jcenter();
-
+    jcenter()
+    mavenCentral()
 }
+
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'me.tatarka:gradle-retrolambda:3.3.0'
+    }
+}
+
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    provided 'de.robv.android.xposed:api:81'
-    //noinspection GradleDependency
-    compile 'com.android.support:palette-v7:23.2.1'
+
+    provided 'de.robv.android.xposed:api:82'
+    provided 'de.robv.android.xposed:api:82:sources'
+
+    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:palette-v7:24.2.1'
     //noinspection GradleDynamicVersion
     compile 'com.pes.materialcolorpicker:library:1.0.+'
+    //noinspection GradleDynamicVersion
+    compile 'eu.chainfire:libsuperuser:1.0.0.+'
 }
+apply plugin: 'me.tatarka.retrolambda'
+
 
